--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,6 @@
     "canvas": "^2.8.0",
     "dotenv": "^10.0.0",
     "ffmpeg": "^0.0.4",
-    "fs": "^0.0.1-security",
     "nodemon": "^2.0.7",
     "request": "^2.88.2"
   }
